--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.6.0
   webview_flutter: ^4.13.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -88,3 +92,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/logo.png"
+  remove_alpha_ios: true
+
